--- a/src/global.css
+++ b/src/global.css
@@ -16,6 +16,7 @@ body {
 
   /* Colors */
   --color-white: #fff;
+  --color--green: #4E9895;
   --color-yellowgreen: #a1de1f;
   --color-black: #000;
 
