--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -15,7 +15,7 @@
   top: 0;
   right: 0;
   left: 0;
-  background-color: var(--color-yellowgreen);
+  background-color: var(--color--green);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: row;
